--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -153,7 +153,7 @@
     <string name="alternativepulling_desc">enable this option if you have difficulties getting gauges updated, it uses an old deprecated method of obtaining data</string>
     <string name="service_torque_connected">Connected to torque service!</string>
     <string name="service_torque_error">Unable to connect to Torque plugin service</string>
-    <string name="service_obd_connected">ODB service connection succesuful</string>
+    <string name="service_obd_connected">ODB service connection successful</string>
     <string name="service_obd_disconnected">ODB service disconnected</string>
     <string name="service_torque_disconnected">Torque service disconnected</string>
 
